--- a/refc/app/src/main/res/layout/include_days.xml
+++ b/refc/app/src/main/res/layout/include_days.xml
@@ -15,13 +15,10 @@
 
         <TextView
             android:id="@+id/tv_sunday"
-            dayIndex="@{0}"
-            dayStatus="@{viewModel.dayStatus.get(0)}"
-            result="@{viewModel.dayClick}"
+            attrDraw="@={viewModel.sunDayState}"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:gravity="center"
-            android:onClick="@{() -> viewModel.changeSelectedDaysStatus(0)}"
             android:text="@string/sunday"
             android:textColor="@color/red"
             android:textStyle="bold"
@@ -33,13 +30,10 @@
 
         <TextView
             android:id="@+id/tv_monday"
-            dayIndex="@{1}"
-            dayStatus="@{viewModel.dayStatus.get(1)}"
-            result="@{viewModel.dayClick}"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:gravity="center"
-            android:onClick="@{() -> viewModel.changeSelectedDaysStatus(1)}"
+            attrDraw="@={viewModel.monDayState}"
             android:text="@string/monday"
             android:textColor="@color/black"
             android:textStyle="bold"
@@ -51,13 +45,10 @@
 
         <TextView
             android:id="@+id/tv_tuesday"
-            dayIndex="@{2}"
-            dayStatus="@{viewModel.dayStatus.get(2)}"
-            result="@{viewModel.dayClick}"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:gravity="center"
-            android:onClick="@{() -> viewModel.changeSelectedDaysStatus(2)}"
+            attrDraw="@={viewModel.tuesDayState}"
             android:text="@string/tuesday"
             android:textColor="@color/black"
             android:textStyle="bold"
@@ -69,13 +60,10 @@
 
         <TextView
             android:id="@+id/tv_wednesday"
-            dayIndex="@{3}"
-            dayStatus="@{viewModel.dayStatus.get(3)}"
-            result="@{viewModel.dayClick}"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:gravity="center"
-            android:onClick="@{() -> viewModel.changeSelectedDaysStatus(3)}"
+            attrDraw="@={viewModel.wednesDayState}"
             android:text="@string/wednesday"
             android:textColor="@color/black"
             android:textStyle="bold"
@@ -87,13 +75,10 @@
 
         <TextView
             android:id="@+id/tv_thursday"
-            dayIndex="@{4}"
-            dayStatus="@{viewModel.dayStatus.get(4)}"
-            result="@{viewModel.dayClick}"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:gravity="center"
-            android:onClick="@{() -> viewModel.changeSelectedDaysStatus(4)}"
+            attrDraw="@={viewModel.thursDayState}"
             android:text="@string/thursday"
             android:textColor="@color/black"
             android:textStyle="bold"
@@ -105,13 +90,10 @@
 
         <TextView
             android:id="@+id/tv_friday"
-            dayIndex="@{5}"
-            dayStatus="@{viewModel.dayStatus.get(5)}"
-            result="@{viewModel.dayClick}"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:gravity="center"
-            android:onClick="@{() -> viewModel.changeSelectedDaysStatus(5)}"
+            attrDraw="@={viewModel.friDayState}"
             android:text="@string/friday"
             android:textColor="@color/black"
             android:textStyle="bold"
@@ -123,13 +105,10 @@
 
         <TextView
             android:id="@+id/tv_saturday"
-            dayIndex="@{6}"
-            dayStatus="@{viewModel.dayStatus.get(6)}"
-            result="@{viewModel.dayClick}"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:gravity="center"
-            android:onClick="@{() -> viewModel.changeSelectedDaysStatus(6)}"
+            attrDraw="@={viewModel.saturDayState}"
             android:text="@string/saturday"
             android:textColor="@color/blue"
             android:textStyle="bold"
