--- a/refc/app/src/main/res/layout/recycler_days.xml
+++ b/refc/app/src/main/res/layout/recycler_days.xml
@@ -47,12 +47,11 @@
             app:layout_constraintTop_toBottomOf="@id/tv_alarm_title"
             app:layout_constraintWidth_percent="0.25" />
 
-        <TextView
+        <include
             android:id="@+id/tv_date"
-            date="@{alarm}"
+            layout="@layout/include_days"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:gravity="center_vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toRightOf="@id/tv_time"
             app:layout_constraintTop_toBottomOf="@id/tv_alarm_title"
