--- a/refc/app/src/main/res/layout/activity_main.xml
+++ b/refc/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,7 @@
             android:id="@+id/tv_remain_time"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            setFastTime="@{viewModel.alarmList}"
             android:background="@color/cyan_200"
             android:elevation="15dp"
             android:gravity="center"
