--- a/refc/app/src/main/res/layout/activity_main.xml
+++ b/refc/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,12 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <data>
+        <variable
+            name="viewModel"
+            type="kr.ryan.weatheralarm.viewModel.AlarmViewModel" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/const_root"
         android:layout_width="match_parent"
@@ -39,6 +45,7 @@
             android:layout_height="0dp"
             android:contentDescription="@string/add"
             android:src="@drawable/ic_add"
+            android:onClick="@{() -> viewModel.onClickBtn(`ADD`)}"
             app:layout_constraintBottom_toTopOf="@id/recycler_alarm"
             app:layout_constraintDimensionRatio="1"
             app:layout_constraintHeight_percent="0.1"
@@ -51,6 +58,7 @@
             android:layout_height="0dp"
             android:contentDescription="@string/more"
             android:src="@drawable/ic_more_vert"
+            android:onClick="@{() -> viewModel.onClickBtn(`MORE`)}"
             app:layout_constraintBottom_toTopOf="@id/recycler_alarm"
             app:layout_constraintDimensionRatio="1"
             app:layout_constraintHeight_percent="0.1"
