--- a/refc/app/src/main/res/layout/dialog_alarm.xml
+++ b/refc/app/src/main/res/layout/dialog_alarm.xml
@@ -3,6 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+        <variable
+            name="alarmViewModel"
+            type="kr.ryan.weatheralarm.viewModel.AlarmViewModel" />
+
+        <variable
+            name="editViewModel"
+            type="kr.ryan.weatheralarm.viewModel.AlarmEditViewModel" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -62,6 +72,7 @@
             android:layout_height="0dp"
             android:background="@color/cyan_200"
             android:text="@string/cancel"
+            android:onClick="@{() -> alarmViewModel.onClickBtn(`CANCEL`)}"
             app:backgroundTint="@null"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHeight_percent="0.1"
@@ -75,6 +86,7 @@
             android:background="@color/cyan_200"
             android:gravity="center"
             android:text="@string/save"
+            android:onClick="@{() -> alarmViewModel.onClickBtn(`SAVE`)}"
             app:backgroundTint="@null"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHeight_percent="0.1"
