[modify] day 클릭시 서클 그리기 지우기

--- a/refc/app/src/main/res/layout/dialog_alarm.xml
+++ b/refc/app/src/main/res/layout/dialog_alarm.xml
@@ -42,6 +42,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:gravity="center_vertical"
+                    android:text="@{editViewModel.selectedDays}"
                     app:layout_constraintHeight_percent="0.15"
                     app:layout_constraintTop_toTopOf="parent" />
 
