--- a/refc/app/src/main/res/layout/include_days.xml
+++ b/refc/app/src/main/res/layout/include_days.xml
@@ -2,6 +2,12 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <data>
+        <variable
+            name="viewModel"
+            type="kr.ryan.weatheralarm.viewModel.AlarmEditViewModel" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -13,6 +19,7 @@
             android:gravity="center"
             android:text="@string/sunday"
             android:textColor="@color/red"
+            drawCircle="@{viewModel.onClickDays}"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="1"
@@ -27,6 +34,7 @@
             android:gravity="center"
             android:text="@string/monday"
             android:textColor="@color/black"
+            drawCircle="@{viewModel.onClickDays}"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="1"
@@ -41,6 +49,7 @@
             android:gravity="center"
             android:text="@string/tuesday"
             android:textColor="@color/black"
+            drawCircle="@{viewModel.onClickDays}"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="1"
@@ -55,6 +64,7 @@
             android:gravity="center"
             android:text="@string/wednesday"
             android:textColor="@color/black"
+            drawCircle="@{viewModel.onClickDays}"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="1"
@@ -69,6 +79,7 @@
             android:gravity="center"
             android:text="@string/thursday"
             android:textColor="@color/black"
+            drawCircle="@{viewModel.onClickDays}"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="1"
@@ -83,6 +94,7 @@
             android:gravity="center"
             android:text="@string/friday"
             android:textColor="@color/black"
+            drawCircle="@{viewModel.onClickDays}"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="1"
@@ -97,6 +109,7 @@
             android:gravity="center"
             android:text="@string/saturday"
             android:textColor="@color/blue"
+            drawCircle="@{viewModel.onClickDays}"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="1"
