[modify] insert 구현완료 job cancel 오류가 나지만 삽입되는것까지 확인

--- a/refc/app/src/main/res/layout/recycler_days.xml
+++ b/refc/app/src/main/res/layout/recycler_days.xml
@@ -38,22 +38,23 @@
             app:layout_constraintTop_toBottomOf="@id/tv_alarm_title"
             app:layout_constraintWidth_percent="0.25" />
 
-        <include
-            android:id="@+id/tv_date"
-            layout="@layout/include_days"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/const_date"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toRightOf="@id/tv_time"
             app:layout_constraintTop_toBottomOf="@id/tv_alarm_title"
-            app:layout_constraintWidth_percent="0.4" />
+            app:layout_constraintWidth_percent="0.4" >
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.appcompat.widget.SwitchCompat
             android:id="@+id/switch_alarm_state"
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toRightOf="@id/tv_date"
+            app:layout_constraintLeft_toRightOf="@id/const_date"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_alarm_title" />
 
