--- a/refc/app/src/main/res/layout/dialog_alarm.xml
+++ b/refc/app/src/main/res/layout/dialog_alarm.xml
@@ -60,6 +60,7 @@
                     android:layout_height="0dp"
                     android:importantForAutofill="no"
                     android:inputType="text"
+                    android:text="@={editViewModel.alarmTitle}"
                     app:layout_constraintHeight_percent="0.25"
                     app:layout_constraintTop_toBottomOf="@id/include_day"
                     tools:ignore="LabelFor" />
