--- a/refc/app/src/main/res/layout/include_days.xml
+++ b/refc/app/src/main/res/layout/include_days.xml
@@ -19,7 +19,7 @@
             android:gravity="center"
             android:text="@string/sunday"
             android:textColor="@color/red"
-            drawCircle="@{viewModel.onClickDays}"
+            drawCircleListener="@{viewModel.onClickDays}"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="1"
@@ -34,7 +34,7 @@
             android:gravity="center"
             android:text="@string/monday"
             android:textColor="@color/black"
-            drawCircle="@{viewModel.onClickDays}"
+            drawCircleListener="@{viewModel.onClickDays}"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="1"
@@ -49,7 +49,7 @@
             android:gravity="center"
             android:text="@string/tuesday"
             android:textColor="@color/black"
-            drawCircle="@{viewModel.onClickDays}"
+            drawCircleListener="@{viewModel.onClickDays}"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="1"
@@ -64,7 +64,7 @@
             android:gravity="center"
             android:text="@string/wednesday"
             android:textColor="@color/black"
-            drawCircle="@{viewModel.onClickDays}"
+            drawCircleListener="@{viewModel.onClickDays}"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="1"
@@ -79,7 +79,7 @@
             android:gravity="center"
             android:text="@string/thursday"
             android:textColor="@color/black"
-            drawCircle="@{viewModel.onClickDays}"
+            drawCircleListener="@{viewModel.onClickDays}"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="1"
@@ -94,7 +94,7 @@
             android:gravity="center"
             android:text="@string/friday"
             android:textColor="@color/black"
-            drawCircle="@{viewModel.onClickDays}"
+            drawCircleListener="@{viewModel.onClickDays}"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="1"
@@ -109,7 +109,7 @@
             android:gravity="center"
             android:text="@string/saturday"
             android:textColor="@color/blue"
-            drawCircle="@{viewModel.onClickDays}"
+            drawCircleListener="@{viewModel.onClickDays}"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="1"
