--- a/refc/app/src/main/res/layout/recycler_date.xml
+++ b/refc/app/src/main/res/layout/recycler_date.xml
@@ -2,6 +2,28 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <data>
+        <variable
+            name="title"
+            type="String" />
+
+        <variable
+            name="meridiem"
+            type="String" />
+
+        <variable
+            name="time"
+            type="String" />
+
+        <variable
+            name="date"
+            type="String" />
+
+        <variable
+            name="onOff"
+            type="Boolean" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:background="?attr/colorPrimaryVariant"
         android:elevation="15dp"
@@ -12,6 +34,7 @@
             android:id="@+id/tv_alarm_title"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:text="@{title}"
             android:gravity="center_vertical"
             android:textSize="16sp"
             android:textStyle="bold"
@@ -22,6 +45,7 @@
             android:id="@+id/tv_meridiem"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:text="@{meridiem}"
             android:gravity="bottom|center_horizontal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHeight_percent="0.3"
@@ -34,6 +58,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:gravity="center_vertical"
+            android:text="@{time}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toRightOf="@id/tv_meridiem"
             app:layout_constraintTop_toBottomOf="@id/tv_alarm_title"
@@ -43,6 +68,7 @@
             android:id="@+id/tv_date"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:text="@{date}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toRightOf="@id/tv_time"
             app:layout_constraintTop_toBottomOf="@id/tv_alarm_title"
@@ -52,6 +78,7 @@
             android:id="@+id/switch_alarm_state"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:checked="@{onOff}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toRightOf="@id/tv_date"
             app:layout_constraintRight_toRightOf="parent"
