--- a/refc/app/src/main/res/values-xhdpi/dimens.xml
+++ b/refc/app/src/main/res/values-xhdpi/dimens.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="item_alarm_height">192dp</dimen>
+    <dimen name="item_alarm_height">75dp</dimen>
+    <dimen name="day_text_size">12dp</dimen>
 </resources>
