--- a/refc/app/src/main/res/values-xxhdpi/dimens.xml
+++ b/refc/app/src/main/res/values-xxhdpi/dimens.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="item_alarm_height">288dp</dimen>
+    <dimen name="item_alarm_height">112.5dp</dimen>
+    <dimen name="day_text_size">16dp</dimen>
 </resources>
