--- a/refc/app/src/main/res/layout/recycler_days.xml
+++ b/refc/app/src/main/res/layout/recycler_days.xml
@@ -83,6 +83,7 @@
                 android:gravity="center"
                 android:text="@string/sunday"
                 android:textColor="@color/red"
+                android:textSize="@dimen/day_text_size"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintDimensionRatio="1"
@@ -98,6 +99,7 @@
                 android:gravity="center"
                 android:text="@string/monday"
                 android:textColor="@color/black"
+                android:textSize="@dimen/day_text_size"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintDimensionRatio="1"
@@ -113,6 +115,7 @@
                 android:gravity="center"
                 android:text="@string/tuesday"
                 android:textColor="@color/black"
+                android:textSize="@dimen/day_text_size"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintDimensionRatio="1"
@@ -128,6 +131,7 @@
                 android:gravity="center"
                 android:text="@string/wednesday"
                 android:textColor="@color/black"
+                android:textSize="@dimen/day_text_size"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintDimensionRatio="1"
@@ -143,6 +147,7 @@
                 android:gravity="center"
                 android:text="@string/thursday"
                 android:textColor="@color/black"
+                android:textSize="@dimen/day_text_size"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintDimensionRatio="1"
@@ -158,6 +163,7 @@
                 android:gravity="center"
                 android:text="@string/friday"
                 android:textColor="@color/black"
+                android:textSize="@dimen/day_text_size"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintDimensionRatio="1"
@@ -173,6 +179,7 @@
                 android:gravity="center"
                 android:text="@string/saturday"
                 android:textColor="@color/blue"
+                android:textSize="@dimen/day_text_size"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintDimensionRatio="1"
