--- a/refc/app/src/main/res/values-mdpi/dimens.xml
+++ b/refc/app/src/main/res/values-mdpi/dimens.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="item_alarm_height">37.5dp</dimen>
-
+    <dimen name="day_text_size">6dp</dimen>
 </resources>
