요일 선택시 그리는것 아직 해결 못함. - 해결(two way binding을 이용함) 리사이클러뷰 요일이 짤리는 현상 해결[일/토가 보이지않음] 필요함. - 약간 해결함. 해상도문제 요일선택시 해당 알람의 date를 알수없기떄문에 구조를 수정중 - 완료

--- a/refc/app/src/main/res/layout/dialog_alarm.xml
+++ b/refc/app/src/main/res/layout/dialog_alarm.xml
@@ -22,8 +22,8 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:timePickerMode="spinner"
-            android:hour="@={editViewModel._selectedHour}"
-            android:minute="@={editViewModel._selectedMinute}"
+            android:hour="@={editViewModel.selectedHour}"
+            android:minute="@={editViewModel.selectedMinute}"
             app:layout_constraintHeight_percent="0.35"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
