--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,10 @@
         <variable
             name="viewModel"
             type="kr.ryan.weatheralarm.viewModel.AlarmViewModel" />
+
+        <variable
+            name="loopViewModel"
+            type="kr.ryan.weatheralarm.viewModel.RemainTimerViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -32,7 +36,7 @@
             android:textColor="@color/white"
             android:textSize="25sp"
             android:textStyle="bold"
-            android:text="@{viewModel.remainTime}"
+            android:text="@{loopViewModel.alarmStatus}"
             app:layout_constraintHeight_percent="0.2"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
