[add] location 테스트중

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,5 +16,7 @@
         <item name="windowSplashScreenBackground">@color/gray_400</item>
 
         <item name="windowSplashScreenAnimatedIcon">@drawable/ic_alarm</item>
+
+        <item name="postSplashScreenTheme">@style/Theme.WeatherAlarm</item>
     </style>
 </resources>
