--- a/app/src/main/res/layout/layout_expand.xml
+++ b/app/src/main/res/layout/layout_expand.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="252dp"
-    android:orientation="vertical">
+    android:layout_height="252dp">
 
     <TextView
         android:id="@+id/tv_expand_location"
         style="@style/TextAppearance.Compat.Notification.Title"
+        android:text="확장"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
@@ -14,34 +14,45 @@
         android:id="@+id/tv_expand_alarm_time"
         style="@style/TextAppearance.Compat.Notification.Info"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:text="AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+                      AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+                      AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+                      AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+                      AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+                      AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+                      AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+                      AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+                      AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+                      AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+        android:layout_below="@id/tv_expand_location"/>
 
-        <ImageView
-            android:id="@+id/iv_weather_status"
-            style="@style/TextAppearance.Compat.Notification.Info"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="2" />
+<!--    <LinearLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:orientation="horizontal">-->
 
-        <LinearLayout
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+<!--        <ImageView-->
+<!--            android:id="@+id/iv_weather_status"-->
+<!--            style="@style/TextAppearance.Compat.Notification.Info"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:layout_weight="2" />-->
 
-            <TextView
-                android:id="@+id/tv_expand_content"
-                style="@style/TextAppearance.Compat.Notification.Info"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+<!--        <LinearLayout-->
+<!--            android:layout_weight="1"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:orientation="vertical">-->
 
-        </LinearLayout>
+<!--            <TextView-->
+<!--                android:id="@+id/tv_expand_content"-->
+<!--                style="@style/TextAppearance.Compat.Notification.Info"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content" />-->
 
-    </LinearLayout>
+<!--        </LinearLayout>-->
 
-</LinearLayout>
+<!--    </LinearLayout>-->
+
+</RelativeLayout>
