--- a/app/src/main/res/layout/layout_summary.xml
+++ b/app/src/main/res/layout/layout_summary.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -10,13 +10,14 @@
         style="@style/TextAppearance.Compat.Notification.Title"
         android:layout_width="match_parent"
         android:layout_height="20dp"
-        android:text="알람 작동" />
+        android:text="축소" />
 
     <TextView
         android:id="@+id/tv_summary_content"
         style="@style/TextAppearance.Compat.Notification.Info"
         android:layout_width="match_parent"
         android:layout_height="20dp"
+        android:layout_below="@id/tv_summary_title"
         android:text="AAAAAAAAAAAAAA" />
 
-</LinearLayout>
+</RelativeLayout>
