--- a/app/src/main/res/layout/layout_expand.xml
+++ b/app/src/main/res/layout/layout_expand.xml
@@ -1,48 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="252dp">
 
     <TextView
         android:id="@+id/tv_expand_location"
         style="@style/TextAppearance.Compat.Notification.Title"
-        android:text="확장"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="50dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_below="@id/tv_expand_location">
+        android:layout_height="202dp"
+        android:layout_below="@id/tv_expand_location"
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/iv_weather_status"
             android:layout_width="0dp"
-            android:scaleType="fitCenter"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_weight="1" />
 
         <TextView
             android:id="@+id/tv_temperature"
             style="@style/TextAppearance.Compat.Notification.Info"
-            android:textStyle="bold"
-            android:gravity="center"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:gravity="center"
+            android:textStyle="bold" />
 
         <LinearLayout
-            android:layout_weight="2"
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_weight="2"
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/tv_expand_content"
+                android:id="@+id/tv_weather_state"
                 style="@style/TextAppearance.Compat.Notification.Info"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="0dp"
+                android:gravity="center"
+                android:textStyle="bold"
+                android:layout_weight="1" />
+
+            <TextView
+                android:id="@+id/tv_max_min_temperature"
+                style="@style/TextAppearance.Compat.Notification.Info"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:gravity="center"
+                android:textStyle="bold"
+                android:layout_weight="1" />
 
         </LinearLayout>
 
