[add] imageView linear layout 에서 1:1비율로 설정할 수 없어 dimens 로 고정 크기 설정 비 / 눈 체크필요함! - 맑음 상태일땐 0으로 오는것을 확인 완료함.

--- a/app/src/main/res/layout/layout_expand.xml
+++ b/app/src/main/res/layout/layout_expand.xml
@@ -1,28 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="252dp">
 
     <TextView
         android:id="@+id/tv_expand_location"
         style="@style/TextAppearance.Compat.Notification.Title"
+        android:gravity="center_vertical"
         android:layout_width="match_parent"
-        android:layout_height="50dp" />
+        android:layout_height="100dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="202dp"
+        android:layout_height="152dp"
         android:layout_below="@id/tv_expand_location"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/iv_weather_status"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/remote_image_width"
+            android:layout_height="@dimen/remote_image_height"
             android:layout_gravity="center"
-            android:layout_weight="1" />
+            android:contentDescription="@string/weather" />
 
         <TextView
             android:id="@+id/tv_temperature"
@@ -44,18 +43,18 @@
                 style="@style/TextAppearance.Compat.Notification.Info"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:gravity="center"
-                android:textStyle="bold"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                android:gravity="center_horizontal|bottom"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/tv_max_min_temperature"
                 style="@style/TextAppearance.Compat.Notification.Info"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:gravity="center"
-                android:textStyle="bold"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                android:gravity="center_horizontal|top"
+                android:textStyle="bold" />
 
         </LinearLayout>
 
