--- a/app/src/main/res/values-mdpi/dimens.xml
+++ b/app/src/main/res/values-mdpi/dimens.xml
@@ -2,4 +2,7 @@
 <resources>
     <dimen name="item_alarm_height">37.5dp</dimen>
     <dimen name="day_text_size">8dp</dimen>
+
+    <dimen name="remote_image_width">25dp</dimen>
+    <dimen name="remote_image_height">25dp</dimen>
 </resources>
