--- a/app/src/main/res/values-xhdpi/dimens.xml
+++ b/app/src/main/res/values-xhdpi/dimens.xml
@@ -2,4 +2,7 @@
 <resources>
     <dimen name="item_alarm_height">75dp</dimen>
     <dimen name="day_text_size">16dp</dimen>
+
+    <dimen name="remote_image_width">50dp</dimen>
+    <dimen name="remote_image_height">50dp</dimen>
 </resources>
