--- a/app/src/main/res/values-xxhdpi/dimens.xml
+++ b/app/src/main/res/values-xxhdpi/dimens.xml
@@ -2,4 +2,7 @@
 <resources>
     <dimen name="item_alarm_height">112.5dp</dimen>
     <dimen name="day_text_size">24dp</dimen>
+
+    <dimen name="remote_image_width">75dp</dimen>
+    <dimen name="remote_image_height">75dp</dimen>
 </resources>
