--- a/app/src/main/res/values-xxxhdpi/dimens.xml
+++ b/app/src/main/res/values-xxxhdpi/dimens.xml
@@ -2,4 +2,7 @@
 <resources>
     <dimen name="item_alarm_height">150dp</dimen>
     <dimen name="day_text_size">32dp</dimen>
+
+    <dimen name="remote_image_width">100dp</dimen>
+    <dimen name="remote_image_height">100dp</dimen>
 </resources>
